progress with external resources needed for the demo

--- a/examples/example-bootstrap.html
+++ b/examples/example-bootstrap.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <title>SlickGrid example: Twitter Bootstrap support</title>
-  <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.css" type="text/css"/>
-  <link rel="stylesheet" href="../slick.grid.css" type="text/css"/>
+  <link rel="stylesheet" href="../components/bootstrap/docs/assets/css/bootstrap.css" type="text/css"/>
+  <link rel="stylesheet" href="../components/slickgrid/slick.grid.css" type="text/css"/>
   <link rel="stylesheet" href="example-bootstrap.css" type="text/css"/>
   <style rel="stylesheet" type="text/css">
     .grid-col {
@@ -70,9 +70,9 @@
     </td>
   </tr>
 </table>
-<script src="../lib/jquery-1.7.min.js"></script>
-<script src="../lib/jquery.event.drag-2.0.min.js"></script>
-<script src="../lib/jquery-ui-1.8.16.custom.min.js"></script>
+<script src="../components/jquery/jquery.js"></script>
+<script src="../components/slickgrid/lib/jquery.event.drag-2.0.min.js"></script>
+<script src="../components/slickgrid/lib/jquery-ui-1.8.16.custom.min.js"></script>
 <!-- From jQuery UI, we only need:
             jquery.ui.core.js
             jquery.ui.widget.js
@@ -80,11 +80,11 @@
             jquery.ui.resizable.js
             jquery.ui.sortable.js
 -->
-<script src="../slick.core.js"></script>
-<script src="../slick.grid.js"></script>
-<script src="../slick.dataview.js"></script>
-<script src="../plugins/slick.checkboxselectcolumn.js"></script>
-<script src="../plugins/slick.rowselectionmodel.js"></script>
+<script src="../components/slickgrid/slick.core.js"></script>
+<script src="../components/slickgrid/slick.grid.js"></script>
+<script src="../components/slickgrid/slick.dataview.js"></script>
+<script src="../components/slickgrid/plugins/slick.checkboxselectcolumn.js"></script>
+<script src="../components/slickgrid/plugins/slick.rowselectionmodel.js"></script>
 <script src="../bootstrap/bootstrap-slickgrid.js"></script>
 <script>
 jQuery(function ($) {
