progress with external resources needed for the demo

--- a/examples/example-bootstrap.html
+++ b/examples/example-bootstrap.html
@@ -72,7 +72,6 @@
 </table>
 <script src="../components/jquery/jquery.js"></script>
 <script src="../components/slickgrid/lib/jquery.event.drag-2.0.min.js"></script>
-<script src="../components/slickgrid/lib/jquery-ui-1.8.16.custom.min.js"></script>
 <!-- From jQuery UI, we only need:
             jquery.ui.core.js
             jquery.ui.widget.js
@@ -80,11 +79,18 @@
             jquery.ui.resizable.js
             jquery.ui.sortable.js
 -->
+<script src="../components/jquery-ui/ui/jquery.ui.core.js"></script>
+<script src="../components/jquery-ui/ui/jquery.ui.widget.js"></script>
+<script src="../components/jquery-ui/ui/jquery.ui.mouse.js"></script>
+<script src="../components/jquery-ui/ui/jquery.ui.resizable.js"></script>
+<script src="../components/jquery-ui/ui/jquery.ui.sortable.js"></script>
+<!-- slickgrid -->
 <script src="../components/slickgrid/slick.core.js"></script>
 <script src="../components/slickgrid/slick.grid.js"></script>
 <script src="../components/slickgrid/slick.dataview.js"></script>
 <script src="../components/slickgrid/plugins/slick.checkboxselectcolumn.js"></script>
 <script src="../components/slickgrid/plugins/slick.rowselectionmodel.js"></script>
+<!-- bootstrap helper -->
 <script src="../bootstrap/bootstrap-slickgrid.js"></script>
 <script>
 jQuery(function ($) {
