--- a/examples/example-bootstrap.html
+++ b/examples/example-bootstrap.html
@@ -5,7 +5,7 @@
   <title>SlickGrid example: Twitter Bootstrap support</title>
   <link rel="stylesheet" href="../components/bootstrap/docs/assets/css/bootstrap.css" type="text/css"/>
   <link rel="stylesheet" href="../components/slickgrid/slick.grid.css" type="text/css"/>
-  <link rel="stylesheet" href="example-bootstrap.css" type="text/css"/>
+  <link rel="stylesheet" href="dist/example-bootstrap.css" type="text/css"/>
   <style rel="stylesheet" type="text/css">
     .grid-col {
       padding: 35px;
