Create an example/dist folder that holds a static copy of only the needed resources from the components. I include it because I find this the best way to allow the examples functional from the static repository (gh-pages) without the need to build them, while at the same time the components directory structure is preserved, keeping the example followable.

--- a/examples/example-bootstrap.html
+++ b/examples/example-bootstrap.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <title>SlickGrid example: Twitter Bootstrap support</title>
-  <link rel="stylesheet" href="../components/bootstrap/docs/assets/css/bootstrap.css" type="text/css"/>
-  <link rel="stylesheet" href="../components/slickgrid/slick.grid.css" type="text/css"/>
+  <link rel="stylesheet" href="dist/components/bootstrap/docs/assets/css/bootstrap.css" type="text/css"/>
+  <link rel="stylesheet" href="dist/components/slickgrid/slick.grid.css" type="text/css"/>
   <link rel="stylesheet" href="dist/example-bootstrap.css" type="text/css"/>
   <style rel="stylesheet" type="text/css">
     .grid-col {
@@ -70,8 +70,8 @@
     </td>
   </tr>
 </table>
-<script src="../components/jquery/jquery.js"></script>
-<script src="../components/slickgrid/lib/jquery.event.drag-2.0.min.js"></script>
+<script src="dist/components/jquery/jquery.js"></script>
+<script src="dist/components/slickgrid/lib/jquery.event.drag-2.0.min.js"></script>
 <!-- From jQuery UI, we only need:
             jquery.ui.core.js
             jquery.ui.widget.js
@@ -79,17 +79,17 @@
             jquery.ui.resizable.js
             jquery.ui.sortable.js
 -->
-<script src="../components/jquery-ui/ui/jquery.ui.core.js"></script>
-<script src="../components/jquery-ui/ui/jquery.ui.widget.js"></script>
-<script src="../components/jquery-ui/ui/jquery.ui.mouse.js"></script>
-<script src="../components/jquery-ui/ui/jquery.ui.resizable.js"></script>
-<script src="../components/jquery-ui/ui/jquery.ui.sortable.js"></script>
+<script src="dist/components/jquery-ui/ui/jquery.ui.core.js"></script>
+<script src="dist/components/jquery-ui/ui/jquery.ui.widget.js"></script>
+<script src="dist/components/jquery-ui/ui/jquery.ui.mouse.js"></script>
+<script src="dist/components/jquery-ui/ui/jquery.ui.resizable.js"></script>
+<script src="dist/components/jquery-ui/ui/jquery.ui.sortable.js"></script>
 <!-- slickgrid -->
-<script src="../components/slickgrid/slick.core.js"></script>
-<script src="../components/slickgrid/slick.grid.js"></script>
-<script src="../components/slickgrid/slick.dataview.js"></script>
-<script src="../components/slickgrid/plugins/slick.checkboxselectcolumn.js"></script>
-<script src="../components/slickgrid/plugins/slick.rowselectionmodel.js"></script>
+<script src="dist/components/slickgrid/slick.core.js"></script>
+<script src="dist/components/slickgrid/slick.grid.js"></script>
+<script src="dist/components/slickgrid/slick.dataview.js"></script>
+<script src="dist/components/slickgrid/plugins/slick.checkboxselectcolumn.js"></script>
+<script src="dist/components/slickgrid/plugins/slick.rowselectionmodel.js"></script>
 <!-- bootstrap helper -->
 <script src="../bootstrap/bootstrap-slickgrid.js"></script>
 <script>
